Minor css fix (avoid SmartGallery flickering on page load)

--- a/src/Presentation/SmartStore.Web/Content/smartstore.smartgallery.css
+++ b/src/Presentation/SmartStore.Web/Content/smartstore.smartgallery.css
@@ -15,6 +15,11 @@
 	position: relative;
 	overflow: hidden;
 	outline: 1px solid transparent;
+    text-align: center;
+}
+
+.sg-image-wrapper > img {
+    max-height: 100%; /* avoids page load flickering */
 }
 
 .sg-loader {
